--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 aux_time.txt
 .Rhistory
 Games.txt
+index.html?tab=all
+PRUEBA.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
