--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ aux_time.txt
 Games.txt
 index.html?tab=all
 PRUEBA.txt
+settings.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
