--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@ Games_HowLong.txt
 index.htmltab=all
 package.json
 package-lock.json
-
+Games_HowLong_v1.xlsx
+Games_HowLong_v2.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
