--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ package-lock.json
 Games_HowLong_v1.xlsx
 Games_HowLong_v2.txt
 Games_HowLong_back_bueno.txt
+TODO.txt
+Games_HowLong_AppID.txt
+Games_HowLong_AppID_metadato.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
