--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ Games_HowLong_AppID_metadato.txt
 index.html
 Games_buscar_back_UNICO.txt
 nuevo1.txt
+Games_buscar_BACK.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
