--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ Games_HowLong_v2.txt
 Games_HowLong_back_bueno.txt
 TODO.txt
 Games_HowLong_AppID.txt
-Games_HowLong_AppID_metadato.txt
+#Games_HowLong_AppID_metadato.txt
 index.html
 Games_buscar_back_UNICO.txt
 nuevo1.txt
