--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ index.html
 Games_buscar_back_UNICO.txt
 nuevo1.txt
 Games_buscar_BACK.txt
+index.htmltab=perfect
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
