--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ Games_buscar_back_UNICO.txt
 nuevo1.txt
 Games_buscar_BACK.txt
 index.htmltab=perfect
+.ipynb_checkpoints
 
 
 # User-specific files (MonoDevelop/Xamarin Studio)
