--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,7 @@ Games_buscar_back_UNICO.txt
 nuevo1.txt
 Games_buscar_BACK.txt
 index.htmltab=perfect
-.ipynb_checkpoints
-
+*ipynb_checkpoints
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
