--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ nuevo1.txt
 Games_buscar_BACK.txt
 index.htmltab=perfect
 *ipynb_checkpoints
+eaaaaaaaa.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
